base/admin.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
  labels:
    app: admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
      - name: admin
        image: asia-southeast1-docker.pkg.dev/efiss-duong/efiss/admin:latest
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 120
          timeoutSeconds: 120
        ports:
        - containerPort: 3000
          name: http
        resources:
---
apiVersion: v1
kind: Service
metadata:
  name: admin
spec:
  type: ClusterIP
  selector:
    app: admin
  ports:
  - protocol: TCP
    name: http
    port: 3000
    targetPort: 3000
