base/ads.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ads
  labels:
    app: ads
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ads
  template:
    metadata:
      labels:
        app: ads
    spec:
      containers:
      - name: ads
        image: asia-southeast1-docker.pkg.dev/efiss-394203/efiss/ads:latest
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 30
          timeoutSeconds: 120
        ports:
        - containerPort: 3000
          name: http
        - containerPort: 50051
          name: grpc
        resources:
---
apiVersion: v1
kind: Service
metadata:
  name: ads
spec:
  type: ClusterIP
  selector:
    app: ads
  ports:
  - protocol: TCP
    name: http
    port: 3000
    targetPort: 3000
  - protocol: TCP
    name: grpc
    port: 50051
    targetPort: 50051
