base/ai.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai
  labels:
    app: ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ai
    spec:
      containers:
      - image: asia-southeast1-docker.pkg.dev/efiss-394203/efiss/ai:latest
        imagePullPolicy: Always
        name: ai
        livenessProbe:
          httpGet:
            path: /ping
            port: 5000
          initialDelaySeconds: 180
          timeoutSeconds: 120
        ports:
        - containerPort: 5000
          name: http
        resources:
          requests:
            memory: 512Mi
            cpu: 1000m
          limits:
            memory: 512Mi
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: ai
spec:
  type: ClusterIP
  selector:
    app: ai
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
