base/auth.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  labels:
    app: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: asia-southeast1-docker.pkg.dev/efiss-394203/efiss/auth:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          name: http
        - containerPort: 50051
          name: grpc
        resources:
---
apiVersion: v1
kind: Service
metadata:
  name: auth
spec:
  type: ClusterIP
  selector:
    app: auth
  ports:
  - protocol: TCP
    name: http
    port: 3000
    targetPort: 3000
  - protocol: TCP
    name: grpc
    port: 50051
    targetPort: 50051
