base/normal-user.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: normal-user
  labels:
    app: normal-user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: normal-user
  template:
    metadata:
      labels:
        app: normal-user
    spec:
      containers:
      - name: normal-user
        image: asia-southeast1-docker.pkg.dev/even-acumen-386115/efiss/normal-user:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          name: http
        - containerPort: 50051
          name: grpc
        resources:
---
apiVersion: v1
kind: Service
metadata:
  name: normal-user
spec:
  type: ClusterIP
  selector:
    app: normal-user
  ports:
  - protocol: TCP
    name: http
    port: 3000
    targetPort: 3000
  - protocol: TCP
    name: grpc
    port: 50051
    targetPort: 50051
