base/product.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product
  labels:
    app: product
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
      - name: product
        image: asia-southeast1-docker.pkg.dev/efiss-duong/efiss/product:latest
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 120
          timeoutSeconds: 120
        ports:
        - containerPort: 3000
          name: http
        - containerPort: 50051
          name: grpc
        resources:
---
apiVersion: v1
kind: Service
metadata:
  name: product
spec:
  type: ClusterIP
  selector:
    app: product
  ports:
  - protocol: TCP
    name: http
    port: 3000
    targetPort: 3000
  - protocol: TCP
    name: grpc
    port: 50051
    targetPort: 50051
