base/search.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search
  labels:
    app: search
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search
  template:
    metadata:
      labels:
        app: search
    spec:
      containers:
      - name: search
        image: asia-southeast1-docker.pkg.dev/impactful-bee-400715/efiss/search:latest
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 120
          timeoutSeconds: 120
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 120
          timeoutSeconds: 120
        ports:
        - containerPort: 3000
          name: http
        - containerPort: 50051
          name: grpc
        resources:
      - name: search-redis
        image: redis
        ports:
        - containerPort: 6379
          name: redis
---
apiVersion: v1
kind: Service
metadata:
  name: search
spec:
  type: ClusterIP
  selector:
    app: search
  ports:
  - protocol: TCP
    name: http
    port: 3000
    targetPort: 3000
  - protocol: TCP
    name: grpc
    port: 50051
    targetPort: 50051
